Edge Loop Preview fails with two Mirror Modifiers #91444

Closed
opened 2021-09-15 22:10:44 +02:00 by Henrik D. · 10 comments
Member

System Information
Operating system: Linux-5.10.0-6-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01

Blender Version
Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 16:56, hash: d7d8eb7de4
Broken version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177
Worked: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0

Short description of error
Previewing of loopcuts sometimes looks wrong if there is two mirror modifiers on the mesh. In particular it looks wrong if the cut edges have vertices which get merged by the second mirror modifier.

Screenshot_20210915_220948.png
This is a regression since it was working in 2.90.1

Exact steps for others to reproduce the error

  • Open the blend file.
  • Activate the loop cut tool and observe the lines it shows

Swap the mirror modifiers and test again

Test File:
ConformalCircleGrid.blend

**System Information** Operating system: Linux-5.10.0-6-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01 **Blender Version** Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 16:56, hash: `d7d8eb7de4` Broken version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` Worked: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` **Short description of error** Previewing of loopcuts sometimes looks wrong if there is two mirror modifiers on the mesh. In particular it looks wrong if the cut edges have vertices which get merged by the second mirror modifier. ![Screenshot_20210915_220948.png](https://archive.blender.org/developer/F10420669/Screenshot_20210915_220948.png) This is a regression since it was working in 2.90.1 **Exact steps for others to reproduce the error** - Open the blend file. - Activate the loop cut tool and observe the lines it shows # Swap the mirror modifiers and test again Test File: [ConformalCircleGrid.blend](https://archive.blender.org/developer/F10420667/ConformalCircleGrid.blend)
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

@ideasman42 Caused by 862b5b1842 . I reverted it to test and this bug was gone.

@ideasman42 Caused by 862b5b1842 . I reverted it to test and this bug was gone.

This issue was referenced by a0acb9bd0c

This issue was referenced by a0acb9bd0cc049b7b8b941b251c42684b4a0f274

This issue was referenced by 1a7757b0bc

This issue was referenced by 1a7757b0bc6945ab7d3b281f3e0dd7130bcf80f0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-11-12 08:35:06 +01:00

This issue was referenced by e6cd4761e7

This issue was referenced by e6cd4761e7c3043c8e9dc789b6eb6d0aa1b723bd
Author
Member

This bug is now there again

This bug is now there again
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91444
No description provided.